src/test/resources/arp/invalid/arp_perm.sil
// Any copyright is dedicated to the Public Domain.
// http://creativecommons.org/publicdomain/zero/1.0/

field f: Int

method bar(x: Ref)
requires acc(x.f, rd)
ensures acc(x.f, rd)
{
    //:: ExpectedOutput(internal:feature.unsupported)
    var c: Perm := rd
    exhale acc(x.f, c)
}
